--- a/ProjetAnalysededonnees.Rmd
+++ b/ProjetAnalysededonnees.Rmd
@@ -760,62 +760,6 @@ kruskal.test(Depth ~ Mag.Type, data = df)
 Le **test de kruskal-wallis n'est pas significatif**. Il n'y a donc **pas de différence entre les profondeurs moyennes des différents types de magma**.
 
 
-### Volume estimé en fonction des volcans (à retirer)
-```{r}
-
-p1 <- ggplot(df, aes(x = Volcanoes, y = Volume, color = Volcanoes)) +
-  geom_boxplot(alpha = 0, width = 0.4, outlier.shape = NA) +
-  stat_summary(fun = mean, geom = "point", shape = 16, size = 4, fill = "black") +
-  theme_minimal(base_size = 14) +
-  theme(
-    legend.position = "none",
-    axis.title.x = element_blank(),
-    axis.text.x = element_text(angle = 25, hjust = 1),
-    plot.title = element_text(face = "bold")
-  ) +
-  ggtitle("Boxplot")
-
-
-p2 <- ggplot(df, aes(x = Volcanoes, y = Volume, color = Volcanoes)) +
-  geom_jitter(position = position_jitter(width = 0.15, height = 0), alpha = 0.7, size = 2) +
-  stat_summary(fun.data = mean_cl_normal, geom = "pointrange", size = 1) +
-  theme_minimal(base_size = 14) +
-  theme(
-    legend.position = "none",
-    axis.title.x = element_blank(),
-    axis.text.x = element_text(angle = 25, hjust = 1),
-    plot.title = element_text(face = "bold")
-  ) +
-  ggtitle("Dot")
-
-
-p3 <- ggplot(df, aes(x = Volume, fill = Volcanoes)) +
-  geom_density(alpha = 0.4, color = "black", linewidth = 0.3) +
-  theme_minimal(base_size = 14) +
-  theme(
-    legend.position = "none",
-    plot.title = element_text(face = "bold")
-  ) +
-  ggtitle("Density")
-
-
-plot_grid(p1, p2, p3, nrow = 1, rel_widths = c(1, 1, 1.1))
-```
-
-```{r}
-
-anova_volu <- aov(log(Volume) ~ Volcanoes, data = df)
-opar <- par(mfrow = c(2, 2))
-plot(anova_volu)
-par(opar)
-leveneTest(log(Volume) ~ Volcanoes, data = df)
-```
-identique que la magnitude car directement extrapolé de ça 
-```{r}
-summary(anova_volu)
-```
-pas de différence significative entre les volumes moyens des différents volcans
-
 ## Lien entre deux variables qualitatives
 
 Dans cette partie de cette étude, c'est le lien entre les variables qualitatives qui va être étudié. 
@@ -862,6 +806,8 @@ ggplot (df, aes (x=Mag.Type)) +geom_bar (aes(fill = Volcanoes),position = "dodge
   theme_minimal ()
 
 ```
+
+
 ```{r}
 tab <- table(df$Volcanoes, df$Mag.Type)
 tab
@@ -1114,19 +1060,18 @@ pheatmap(as.matrix(acp_sect$co^2), cluster_cols=F,color = rev (hcl.colors(50, "G
 ```
 
 ```{r}
-s.corcircle (acp_sect$co, xax = 1, yax = 2, sub="Correlation selon le plan 1-2")
+fviz_pca_var(acp_sect, col.var = "cos2", gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),labelsize = 3)
 ```
 
 ```{r}
 fviz_pca_biplot(acp_sect,
-                geom.ind = "point",          # uniquement des points
-                geom.ind.params = list(size = 2),  # taille fixe
-                col.ind = df_acp$Volcanoes,  # couleur selon volcan
-                fill.ind = df_acp$Volcanoes, # couleur intérieure (si shape 21)
-                palette = "jco",             # palette qualitative
-                pointshape = 21,             # cercles remplis
-                alpha.ind = 1,               # opacité fixe
-                col.var = "steelblue",       # vecteurs bleus
+                geom.ind = "point",
+                geom.ind.params = list(size = 2),
+                col.ind = df_acp$Volcanoes,
+                fill.ind = df_acp$Volcanoes,
+                palette = "jco",
+                pointshape = 21,
+                alpha.ind = 1,    
                 repel = TRUE,
                 legend.title = "Volcan",
                 title = "ACP : Biplot avec points de taille fixe")
@@ -1136,22 +1081,33 @@ fviz_pca_biplot(acp_sect,
 
 
 # Equation logistique multinomiale
+
+La régression logistique multinomiale est une extension de la régression logistique binaire qui permet de modéliser des variables dépendantes catégorielles avec plus de deux catégories. Ici, deux modèles sont réalisés : un avec comme variable dépendante le type de magma et un autre avec comme variable dépendante le volcan.
 ```{r}
 model <- multinom(Mag.Type ~ Magnitude , data = df)
 model1 <- multinom(Mag.Type ~ Magnitude + Volume, data = df)
 model2 <- multinom(Mag.Type ~ Magnitude + Volume + Depth, data = df)
 ```
+
+
 ```{r}
 summary(model)
 ```
 
 ```{r}
-summary(model1)#AIC la plus basse entre tout les modèles, cependant ce n'est tout de même pas des bons résultats 
+summary(model1) 
 ```
-Le problème est le suivant, les écarts types sont beaucoup trop petits. Le modèle va donc sur estimé les coefficients des classes qui ne sont pas du tout supperposée. Même si il y a un petit chevauchement, les classes extrêmes sont parfaitement séparés, c'est un cas de sépration quasi-complètes
+
 ```{r}
 summary(model2)
 ```
+
+L’AIC (Akaike Information Criterion) est une mesure qui permet de déterminer quel modèle statistique explique le plus le modèle. Il faut que l’AIC soit la plus faible possible. Le plus grand point fort de l’AIC, c’est qu’elle pénalise les modèles qui sont trop complexes et qui donc ne peuvent pas s’appliquer sur des données invisibles. 
+
+Dans cette étude, c'est le deuxième qui est le meilleur car il a l'AIC la plus faible. Cela voudrait dire que la magnitude et le volume sont des bons prédicteurs pour le type de magma.
+
+Cependant le problème est le suivant, les écarts types sont beaucoup trop petits. Le modèle va donc sur estimé les coefficients des classes qui ne sont pas du tout supperposée. Même si il y a un petit chevauchement, les classes extrêmes sont parfaitement séparés, c'est un cas de sépration quasi-complètes. De plus, un autre facteur qui joue sur ces écart-types est le nombre d'échantillon. Le nombre de volcans dans cette étude n'est pas suffisant pour réaliser un modèle cohérent. 
+
 ```{r}
 model <- multinom(Volcanoes~ Magnitude , data = df)
 model1 <- multinom(Volcanoes~ Magnitude + Depth, data = df)
@@ -1169,8 +1125,11 @@ summary(model2)
 
 
 # Clustering 
+
+Le clustering est une technique d'apprentissage non supervisée qui permet de regrouper des observations similaires en clusters ou groupes. Ici, le clustering K-means est utilisé pour regrouper les volcans en fonction de leurs caractéristiques quantitatives : profondeur, magnitude et volume.
+
 ```{r}
-df_cluster <- df[, c("Depth", "Magnitude", "Volume")]
+df_cluster <- df[, c("Depth", "Magnitude")]
 fviz_nbclust(df_cluster, kmeans, method = "wss") +
   theme_minimal() +
   labs(title = "Méthode du coude - détermination du nombre de clusters")
@@ -1180,7 +1139,7 @@ fviz_nbclust(df_cluster, kmeans, method = "wss") +
 ```{r}
 set.seed(42)  # pour reproductibilité
 
-km <- kmeans(df_cluster, centers = 4, nstart = 25)
+km <- kmeans(df_cluster, centers = 2, nstart = 25)
 #il faut justifier pourquoi 3 ou 4 groupes avec la techniques du coude (c'est le mieux)
 # Ajouter le cluster au jeu de données
 df$Cluster <- as.factor(km$cluster)
